--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</div>
 				<div id="voronoi-rules">
 					<p>
-						écrit par Corentin Wallez sur une idée de Dennis Shasha
+						écrit par Corentin Wallez d'après l'applet Java réalisée par Chris Poultney et Monty Faidley, sur une idée de Dennis Shasha
 					</p>
 					<p>
 						<b>Règles du jeu</b>
