--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 		<title>Voronoi Tesselation</title>
-		<link type="text/css" rel="stylesheet" href="voronoi.css"/>
-                <script type="text/javascript" src="vendor/jsrender.js"></script>		
-		<script type="text/javascript" src="voronoi.js"></script>
+		<link type="text/css" rel="stylesheet" href="Voronoi/voronoi.css"/>
+                <script type="text/javascript" src="Voronoi/vendor/jsrender.js"></script>		
+		<script type="text/javascript" src="Voronoi/voronoi.js"></script>
 		<!--[if lte IE 8]>
-			<script type="text/javascript" src="vendor/d3forie8min.js"></script>
+			<script type="text/javascript" src="Voronoi/vendor/d3forie8min.js"></script>
 		<![endif]-->		
 		<!--[if gte IE 9]><!-->
-			<script type="text/javascript" src="vendor/d3.min.js"></script>
+			<script type="text/javascript" src="Voronoi/vendor/d3.min.js"></script>
 		<!--<![endif]-->
 		<script id="player-list-choose-template" type="text/x-jsrender">
 			{{for players ~ai=ai ~defaults=defaults ~colors=colors}}
